--- a/src/index.css
+++ b/src/index.css
@@ -11,16 +11,13 @@ body {
 * {
 	box-sizing:border-box;
 	font-family: sans-serif;
+	color-scheme: dark;
 }
 
 h1 {
-	font-size: 55pt;
+	font-size: 40pt;
 }
 
-.App {
-  text-align: center;
-  overflow: hidden; /* Hide overflow to prevent content from appearing outside the viewport */
-}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
