--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,26 @@ h1 {
 	font-size: 40pt;
 }
 
+h2 {
+	font-size: 35pt;
+}
+
+h3 {
+	font-size: 30pt;
+}
+
+h4 {
+	font-size: 25pt;
+}
+
+h5 {
+	font-size: 23pt;
+}
+
+p {
+	font-size: 18pt;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
